added error alert message

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
            placeholder="Enter a breed" required /> 
            <input type="submit" value="Get a dog pic!">
         </form>
+
+        <p id="js-error-message" class="error-message"></p>
+
         <section class="results hidden">
         <h2>Look at this dog!</h2>
         </section>
